--- a/src/DWP.Demo.UnitTests/DWP.Demo.UnitTests.csproj
+++ b/src/DWP.Demo.UnitTests/DWP.Demo.UnitTests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DWP.Demo.Api\DWP.Demo.Api.csproj" />
+  </ItemGroup>
+
 </Project>
