--- a/src/DWP.Demo.Api/DWP.Demo.Api.csproj
+++ b/src/DWP.Demo.Api/DWP.Demo.Api.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks" Version="1.0.0" />
+    <PackageReference Include="GeoCoordinate" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="5.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
